--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <button id="buttonTestAlignement">Jouer</button>
     <div id="main">
         <div id="infos">
-            <div id="temps">Temps : 0</div>
-            <div id="score">Score : 0</div>
-            <div>niveau : 0</div>
+            <div id="temps">Temps :</div>
+            <div>Score : <span id="score">0</span> </div>
+            <div id="niveau">niveau : 0</div>
         </div>
         <div id="grille">
             <div></div>
