enelver le bouton

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
-    <H1>Jeu type candy crush... version avec utilisation de divs</H1>
-    <button id="buttonTestAlignement">Jouer</button>
+    <h1>Jeu candy crush</h1>
     <div id="main">
         <div id="infos">
             <div id="temps">Temps :</div>
             <div>Score : <span id="score">0</span> </div>
             <div id="niveau">niveau : 0</div>
+        </div>
+        <div> 
         </div>
         <div id="grille">
             <div></div>
